[package]
name = "domain_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
idna = "0.3"
memchr = "2"
arraystring = "0.3.0"
typenum = "1"

[profile.release]
lto = true
panic = "abort"
opt-level = "s"


